--- a/ADIN.WPF/Components/DeviceListing.xaml
+++ b/ADIN.WPF/Components/DeviceListing.xaml
@@ -28,7 +28,7 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="30" Height="30" Source="{Binding ImagePath}" Margin="0 0 5 0"/>
-                            <TextBlock x:Name="SerialNumberTextBlock" Grid.Column="1" Grid.Row="0" FontSize="14" Text="{Binding SerialNumber}"/>
+                            <TextBlock x:Name="SerialNumberTextBlock" Grid.Column="1" Grid.Row="0" FontSize="14" Text="{Binding DeviceHeader}"/>
                             <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Name}" FontSize="12" FontWeight="Normal"/>
                         </Grid>
                     </DataTemplate>
