--- a/ADIN.WPF/View/ExtraCommandsView.xaml
+++ b/ADIN.WPF/View/ExtraCommandsView.xaml
@@ -8,7 +8,7 @@
              xmlns:converters="clr-namespace:ADIN.WPF.Converters"
              xmlns:enum="clr-namespace:ADIN.Device.Models;assembly=ADIN.Device"
              mc:Ignorable="d" 
-             d:DesignHeight="340" d:DesignWidth="300">
+             d:DesignHeight="350" d:DesignWidth="300">
     <UserControl.Resources>
         <converters:BooleanVisibilityConverter x:Key="booleanVisibilityConverter" IsInversed="False"/>
         <converters:BooleanVisibilityConverter x:Key="invertedBooleanVisibilityConverter" IsInversed="True"/>
@@ -24,7 +24,8 @@
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys (Pin)" Command="{Binding SubSysResetCommand}" CommandParameter="{x:Static enum:ResetType.SubSysPin}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys" Command="{Binding SubSysResetCommand}" CommandParameter="{x:Static enum:ResetType.SubSys}"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: PHY" Command="{Binding PhyResetCommand}" CommandParameter="{x:Static enum:ResetType.Phy}"/>
-            <Grid Margin="0 15 0 0">
+            <TextBlock Text="10Base-T1L Ports" Visibility="{Binding IsPortNumVisible, Converter={StaticResource booleanVisibilityConverter}}" FontWeight="Bold" FontSize="18" Margin="4 15 0 5"/>
+            <Grid Margin="0 0 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
