ADIN1200_Implementation: - added phyaddress for adin1200 model - used clause 22 format for clause 45 read/write for adin1200 fwAPI - fixed sliders to remove ticks on test mode and adjust placement

--- a/ADIN.WPF/Themes/SliderStyle.xaml
+++ b/ADIN.WPF/Themes/SliderStyle.xaml
@@ -52,7 +52,7 @@
                     TickFrequency="32"
                     Fill="Black"
                     Height="8"
-                    Visibility="Visible" />
+                    Visibility="Collapsed" />
             <Border Name="TrackBackground"
                     Margin="0"
                     CornerRadius="2" 
