--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -94,6 +94,20 @@
                 </StackPanel>
             </Border>
 
+            <Border Style="{StaticResource BorderSyle}" Visibility="{Binding Is1100Visible, Converter={StaticResource booleanVisibilityConverter}}">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Max Slicer Error: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding MaxSlicerError}" Style="{StaticResource DeviceStatusValueStyle}"/>
+                </StackPanel>
+            </Border>
+
+            <Border Style="{StaticResource BorderSyle}" Visibility="{Binding Is1100Visible, Converter={StaticResource booleanVisibilityConverter}}">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Spike Count: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding SpikeCount}" Style="{StaticResource DeviceStatusValueStyle}"/>
+                </StackPanel>
+            </Border>
+
             <Grid Visibility="{Binding IsVisibleSpeedList, Converter={StaticResource booleanVisibilityConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
