--- a/ADIN.WPF/View/LogActivityView.xaml
+++ b/ADIN.WPF/View/LogActivityView.xaml
@@ -11,7 +11,7 @@
     <UserControl.Resources>
         <converter:ColorToBrushConverter x:Key="ColorToBrushConverter"/>
     </UserControl.Resources>
-    <DockPanel>
+    <DockPanel Margin="0 0 2.5 0">
         <Border DockPanel.Dock="Top" CornerRadius="5,5,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}">
             <DockPanel>
                 <TextBlock Text="Activity Log" Style="{StaticResource TextBlockHeaderStyle}" Margin="5"/>
