--- a/ADIN.WPF/View/RunCableDiagView.xaml
+++ b/ADIN.WPF/View/RunCableDiagView.xaml
@@ -8,20 +8,30 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <GroupBox Header="Run Cable Diagnostics" Style="{StaticResource GroupBoxStyle}" Margin="0 0 0 5">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" TextWrapping="Wrap" Text="{Binding Description}" Style="{StaticResource TextBlockstyle}"/>
-                <telerik:RadButton Grid.Row="1" Style="{StaticResource TelerikButtonStyle}" Content="{Binding LinkStatus}" Command="{Binding DisableLinkCommand}"/>
-                <CheckBox Grid.Row="2" IsChecked="{Binding IsRxSuppression}" Content="Check for Cross Pair Faults" Style="{StaticResource CheckBoxStyle}"/>
-                <telerik:RadButton Grid.Row="3" Style="{StaticResource TelerikButtonStyle}" Content="Diagnose" Command="{Binding DiagnoseCommand}"/>
-            </Grid>
-        </GroupBox>
+        <telerik:RadBusyIndicator IsBusy="{Binding IsOngoingDiag}" BusyContent="{Binding BusyContent}">
+            <GroupBox Header="Run Cable Diagnostics" Style="{StaticResource GroupBoxStyle}" Margin="0 0 0 5">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" TextWrapping="Wrap" Text="{Binding Description}" Style="{StaticResource TextBlockstyle}"/>
+                    <telerik:RadButton Grid.Row="1" Style="{StaticResource TelerikButtonStyle}" Content="{Binding LinkStatus}" Command="{Binding DisableLinkCommand}"/>
+                    <CheckBox Grid.Row="2" IsChecked="{Binding IsRxSuppression}" Content="Check for Cross Pair Faults" Style="{StaticResource CheckBoxStyle}"/>
+                    <telerik:RadButton Grid.Row="3" Style="{StaticResource TelerikButtonStyle}" Content="Diagnose" Command="{Binding DiagnoseCommand}"/>
+                    <Border Style="{StaticResource BorderSyle}" Grid.Row="4">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Cable Diagnostics Results:" Style="{StaticResource DeviceStatusTextBlockstyle}" Margin="0 3 0 0"/>
+                            <telerik:RadListBox ItemsSource="{Binding CableDiagResults}"
+                                            Style="{StaticResource ListBoxStyle}"/>
+                        </StackPanel>
+                    </Border>
+
+                </Grid>
+            </GroupBox>
+        </telerik:RadBusyIndicator>
     </Grid>
 </UserControl>
