--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -63,6 +63,20 @@
                             </Grid>
                         </Grid>
                     </TabItem>
+                    <TabItem Header="Clock Pin Control" Style="{StaticResource TabItemStyle}" Visibility="{Binding IsClkPinControlVisible, Converter={StaticResource booleanVisibilityConverter}}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" MinWidth="400"/>
+                                <ColumnDefinition Width="3"/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <local:ClockPinControlView Grid.Column="0" DataContext="{Binding ClockPinControlVM}"/>
+                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
+                            <Grid Grid.Column="2">
+                                <components:DeviceStatusView DataContext="{Binding DeviceStatusVM}" Margin="10 0 0 0"/>
+                            </Grid>
+                        </Grid>
+                    </TabItem>
                     <TabItem Header="Loopback" Style="{StaticResource TabItemStyle}" IsEnabled="{Binding EnableTabs}" Visibility="{Binding IsADIN2111, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -111,7 +125,7 @@
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
                             <!--ADIN1320-->
-                                <!--Insert View for ADIN1320-->
+                            <!--Insert View for ADIN1320-->
                             <!--ADIN1300/1200-->
                             <Grid Visibility="{Binding IsADIN1300Visible, Converter={StaticResource booleanVisibilityConverter}}">
                                 <local:RunCableDiagView Grid.Column="0" Margin="0 0 10 0" DataContext="{Binding RunCableDiagnosticVM}"/>
@@ -138,19 +152,6 @@
                     <TabItem Header="Register Access" Style="{StaticResource TabItemStyle}" IsEnabled="{Binding EnableTabs}" Visibility="{Binding IsADIN2111, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                         <local:RegisterListingView DataContext="{Binding RegisterListingVM}"/>
                     </TabItem>
-                    <!--<TabItem Header="Clock Pin Control" Style="{StaticResource TabItemStyle}">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*" MinWidth="400"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <local:ClockPinControlView Grid.Column="0" DataContext="{Binding ClockPinControlVM}"/>
-                            -->
-                    <!--<GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />-->
-                    <!--
-                        </Grid>
-                    </TabItem>-->
                 </TabControl>
             </Grid>
             <Grid Grid.ColumnSpan="2" Grid.Row="2" Margin="0 10 0 0">
