--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -17,7 +17,7 @@
     </UserControl.Resources>
     <Grid>
         <StackPanel>
-            <Grid>
+            <Grid Margin="2.5 0 0 5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
